--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Tutorial repo for Klaster SDK, referenced in the Getting Started documentation at https://docs.klaster.io",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsx src/index.ts",
+    "build": "tsc"
   },
   "author": "Mislav Javor",
   "license": "MIT",
@@ -15,6 +17,8 @@
     "typescript": "^5.5.4"
   },
   "dependencies": {
+    "@across-protocol/sdk-v2": "^0.24.4",
+    "@lifi/sdk": "^3.3.0",
     "axios": "^1.7.4",
     "express": "^4.19.2",
     "klaster-sdk": "^0.5.2",
