--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsx src/index.ts",
+    "check": "tsx src/uniswap.ts",
     "build": "tsc"
   },
   "author": "Mislav Javor",
@@ -19,7 +20,9 @@
   "dependencies": {
     "@across-protocol/sdk-v2": "^0.24.4",
     "@lifi/sdk": "^3.3.0",
+    "@uniswap/v2-sdk": "^4.6.2",
     "axios": "^1.7.4",
+    "ethers": "^5.7.2",
     "express": "^4.19.2",
     "klaster-sdk": "^0.5.2",
     "viem": "^2.19.8"
